Open link in new tab

--- a/index.html
+++ b/index.html
@@ -288,33 +288,33 @@
 	<body>
 		<div id="container">
 			<div class="under"><img src="comprancha.png"/></div>
-			<div id="bons"><a href="http://www.comprancha.com/bons-de-onda/" class="fill"></a></div>
-			<div id="como"><a href="http://www.comprancha.com/como-funciona/" class="fill"></a></div>
-			<div id="quem"><a href="http://www.comprancha.com/quemtem/"class="fill" ></a></div>
-			<div id="supeata"><a href="http://www.comprancha.com/" class="fill"></a></div>
-			<div id="rack"><a href="http://www.comprancha.com/regulamento-rack/" class="fill"></a></div>
-			<div id="rio"><a href="http://www.comprancha.com/premiacao-rio-photo-festival-comprancha-2/" class="fill"></a></div>
-			<div id="rio2"><a href="www.riophotofestival.com" class="fill"></a></div>
-			<div id="rio3"><a href="http://www.comprancha.com/premiacao-rio-photo-festival-comprancha-2/" class="fill"></a></div>
-			<div id="casa"><a href="http://www.comprancha.com/festa-da-red-bull-na-garagem-do-comprancha/" class="fill"></a></div>
-			<div id="fotos"><a href="http://www.comprancha.com/category/momentos-comprancha/" class="fill"></a></div>
-			<div id="pranchas"><a href="http://www.comprancha.com/" class="fill"></a></div>
-			<div id="surfista"><a href="https://www.catarse.me/pt/reconhecendosurf" class="fill"></a></div>
-			<div id="circulo"><a href="http://www.loja.philrajzman.com.br/" class="fill"></a></div>
-			<div id="maluco"><a href="http://www.hotstick.com.br/" class="fill"></a></div>
-			<div id="vizu"><a href="http://www.vizubox.com" class="fill"></a></div>
-			<div id="categorias"><a href="http://www.comprancha.com/categorias/" class="fill"></a></div>
-			<div id="surf"><a href="http://www.comprancha.com/categoria/surf/" class="fill"></a></div>
-			<div id="kite"><a href="http://www.comprancha.com/categoria/kitesurf/" class="fill"></a></div>
-			<div id="snow"><a href="http://www.comprancha.com/categoria/snowboard/" class="fill"></a></div>
-			<div id="wind"><a href="http://www.comprancha.com/categoria/windsurf/" class="fill"></a></div>
-			<div id="sup"><a href="http://www.comprancha.com/categoria/stand-up-paddle/" class="fill"></a></div>
-			<div id="skate"><a href="http://www.comprancha.com/categoria/skate/" class="fill"></a></div>
-			<div id="body"><a href="http://www.comprancha.com/categoria/bodyboard/" class="fill"></a></div>
-			<div id="wake"><a href="http://www.comprancha.com/categoria/wakeboard/" class="fill"></a></div>
-			<div id="neo"><a href="http://www.comprancha.com/categoria/neoprene/" class="fill"></a></div>
-			<div id="foto"><a href="http://www.comprancha.com/categoria/foto-e-filmagem/" class="fill"></a></div>
-			<div id="outro"><a href="http://www.comprancha.com/categoria/outros/" class="fill"></a></div>
+			<div id="bons"><a href="http://www.comprancha.com/bons-de-onda/" class="fill" target="_blank"></a></div>
+			<div id="como"><a href="http://www.comprancha.com/como-funciona/" class="fill" target="_blank"></a></div>
+			<div id="quem"><a href="http://www.comprancha.com/quemtem/"class="fill"  target="_blank"></a></div>
+			<div id="supeata"><a href="http://www.comprancha.com/" class="fill" target="_blank"></a></div>
+			<div id="rack"><a href="http://www.comprancha.com/regulamento-rack/" class="fill" target="_blank"></a></div>
+			<div id="rio"><a href="http://www.comprancha.com/premiacao-rio-photo-festival-comprancha-2/" class="fill" target="_blank"></a></div>
+			<div id="rio2"><a href="www.riophotofestival.com" class="fill" target="_blank"></a></div>
+			<div id="rio3"><a href="http://www.comprancha.com/premiacao-rio-photo-festival-comprancha-2/" class="fill" target="_blank"></a></div>
+			<div id="casa"><a href="http://www.comprancha.com/festa-da-red-bull-na-garagem-do-comprancha/" class="fill" target="_blank"></a></div>
+			<div id="fotos"><a href="http://www.comprancha.com/category/momentos-comprancha/" class="fill" target="_blank"></a></div>
+			<div id="pranchas"><a href="http://www.comprancha.com/" class="fill" target="_blank"></a></div>
+			<div id="surfista"><a href="https://www.catarse.me/pt/reconhecendosurf" class="fill" target="_blank"></a></div>
+			<div id="circulo"><a href="http://www.loja.philrajzman.com.br/" class="fill" target="_blank"></a></div>
+			<div id="maluco"><a href="http://www.hotstick.com.br/" class="fill" target="_blank"></a></div>
+			<div id="vizu"><a href="http://www.vizubox.com" class="fill" target="_blank"></a></div>
+			<div id="categorias"><a href="http://www.comprancha.com/categorias/" class="fill" target="_blank"></a></div>
+			<div id="surf"><a href="http://www.comprancha.com/categoria/surf/" class="fill" target="_blank"></a></div>
+			<div id="kite"><a href="http://www.comprancha.com/categoria/kitesurf/" class="fill" target="_blank"></a></div>
+			<div id="snow"><a href="http://www.comprancha.com/categoria/snowboard/" class="fill" target="_blank"></a></div>
+			<div id="wind"><a href="http://www.comprancha.com/categoria/windsurf/" class="fill" target="_blank"></a></div>
+			<div id="sup"><a href="http://www.comprancha.com/categoria/stand-up-paddle/" class="fill" target="_blank"></a></div>
+			<div id="skate"><a href="http://www.comprancha.com/categoria/skate/" class="fill" target="_blank"></a></div>
+			<div id="body"><a href="http://www.comprancha.com/categoria/bodyboard/" class="fill" target="_blank"></a></div>
+			<div id="wake"><a href="http://www.comprancha.com/categoria/wakeboard/" class="fill" target="_blank"></a></div>
+			<div id="neo"><a href="http://www.comprancha.com/categoria/neoprene/" class="fill" target="_blank"></a></div>
+			<div id="foto"><a href="http://www.comprancha.com/categoria/foto-e-filmagem/" class="fill" target="_blank"></a></div>
+			<div id="outro"><a href="http://www.comprancha.com/categoria/outros/" class="fill" target="_blank"></a></div>
 		</div>
 	</body>
 </html>
