--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 			<div id="supeata"><a href="http://www.comprancha.com/" class="fill" target="_blank"></a></div>
 			<div id="rack"><a href="http://www.comprancha.com/regulamento-rack/" class="fill" target="_blank"></a></div>
 			<div id="rio"><a href="http://www.comprancha.com/premiacao-rio-photo-festival-comprancha-2/" class="fill" target="_blank"></a></div>
-			<div id="rio2"><a href="www.riophotofestival.com" class="fill" target="_blank"></a></div>
+			<div id="rio2"><a href="http://www.comprancha.com/premiacao-rio-photo-festival-comprancha-2/" class="fill" target="_blank"></a></div>
 			<div id="rio3"><a href="http://www.comprancha.com/premiacao-rio-photo-festival-comprancha-2/" class="fill" target="_blank"></a></div>
 			<div id="casa"><a href="http://www.comprancha.com/festa-da-red-bull-na-garagem-do-comprancha/" class="fill" target="_blank"></a></div>
 			<div id="fotos"><a href="http://www.comprancha.com/category/momentos-comprancha/" class="fill" target="_blank"></a></div>
